Issue 7 - Added Base64 encoder obtained from http://iharder.sourceforge.net/current/java/base64/